# game_of_life_cpp

./: CMakeLists.txt  README.md
include/: constants.h  gameoflife.h
src/: gameoflife.cpp  main.cpp
